prefix checkPerformance;